compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__merge_case_branch_works_with_existing_alternative_patterns.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn go(result) {\n  case result {\n    [] | [_, _, ..]-> todo\n    [_] -> todo\n    _ -> 2\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn go(result) {
  case result {
    [] | [_, _, ..]-> todo
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    [_] -> todo
▔▔▔▔↑          
    _ -> 2
  }
}


----- AFTER ACTION
public fn go(result) {
  case result {
    [] | [_, _, ..] | [_] -> todo
    _ -> 2
  }
}
