compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_in_single_line_pipeline_step_with_message.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  [1, 2, 3] |> echo as \"message\" |> wibble\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  [1, 2, 3] |> echo as "message" |> wibble
               ↑                          
}


----- AFTER ACTION
public fn main() {
  [1, 2, 3] |> wibble
}
