compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_last_in_long_pipeline_step_with_message.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  [1, 2, 3]\n  |> wibble\n  |> echo as \"message\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  [1, 2, 3]
  |> wibble
  |> echo as "message"
     ↑                
}


----- AFTER ACTION
public fn main() {
  [1, 2, 3]
  |> wibble
}
