compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_removes_does_not_remove_entire_echo_statement_if_its_the_return_of_a_fn.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  fn() {\n    echo 1\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  fn() {
    echo 1
    ↑     
  }
}


----- AFTER ACTION
public fn main() {
  fn() {
    1
  }
}
