compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_removes_multiple_entire_echo_statement_used_with_literals_but_stops_at_comments.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  echo 1\n\n  // Oh no I hope I'm not deleted by the code action!!\n  Nil\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  echo 1
  ↑     

  // Oh no I hope I'm not deleted by the code action!!
  Nil
}


----- AFTER ACTION
public fn main() {
  // Oh no I hope I'm not deleted by the code action!!
  Nil
}
